feat: improve kotlin code completion performance and edit application
Signed-off-by: invokevirtual <purwarpranav80@gmail.com>